sprints/css/style.css
/* Fonts */
@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900);

/* Reset */
html {
  box-sizing: border-box;
  font-size: 16px;
}
*, *:before, *:after { box-sizing: inherit; }

body,h1,h2,h3,h4,h5,h6,
p,ol,ul {
  margin: 0;
  padding: 0;
  font-weight: normal;
  font-family: "Lato", sans-serif;
}

ol,ul { list-style: none; }

body {
  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/2283/denim.png);
}
/* Header */
.global-header {
  background: #1d1c1d;
  color: #fff;
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-between;
  align-items: center;
}
.global-header img { width: 300px; }
.global-header .date-time {
  padding: 0 20px 0 0;
  font-size: 1.25em;
}
.global-header .date-time .time{ padding-left:15px; }

.sprint-title {
  background: #f5f5f5;
  padding: 5px 30px;
}

.sprint-title h1 {
  color: #4d4d4d;
  font-size: 2.25em;
  font-weight: 700;
}

.progress-titles {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-gap: 10px;
  text-align: center;
  font-size: 1.1em;
  padding: 10px;
  margin-bottom: 15px;
  border-bottom: 1px solid #b8b8b8;
  background: #ffc222;
}

.cards {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-auto-rows: minmax(150px, auto);
  grid-auto-flow: dense;
  grid-gap: 5px;
}

.hide { display: none;}

.card {
  margin: 10px;
  background: #fff;
  display: flex;
  flex-direction: column;
  align-content: center;
  height: 250px;
  border-radius: 5px;
}

.quick-info {
  display: flex;
  height: 50px;
  align-items: center;
  justify-content: space-between;
  background: #f5f5f5;
  padding: 10px;
  border-bottom: 1px solid #1d1c1d;
}

.quick-info > .devs li { display: inline-block; padding: 3px;}
.quick-info > .devs li img {
  border-radius: 50%;
  width: 30px;
}

.card-name {
  font-size: 0.85em;
  border-radius: 5px;
  border: 1px solid #bbb;
  padding: 5px;
  text-align: center;
}

.card-name.development { background: #fb6666; }
.card-name.backlog { background: #c8d9aa; }

.description {
  margin-top: 20px;
  padding: 10px;
  overflow: hidden;
  max-height: 130px;
}
.description h2 {
  font-size: 1.25em;
  font-weight: 700;
  padding-bottom: 10px;
}

.fadeout {
  position: relative;
  height: 4em;
  bottom: 3em;
  background: linear-gradient(
    rgba(255, 255, 255, 0) 0%,
    rgba(255, 255, 255, 1) 100%
  );
}

[data-progress=""], [data-progress="None"] { grid-column: 1; }
[data-progress="In Progress"] { grid-column: 2; }
[data-progress="Completed"] { grid-column: 3; }
[data-progress="Accepted"] {
  grid-column: 4;
  opacity: 0.35;
}

